# famstack

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  stack  stack.example.toml  users.example.toml
docs/: README.md  cleanup-backlog.md  creating-stacklets.md  guide.md  stack-reference.md
docs/adr/: adr-001-user-seeding.md  adr-002-port-mode-first.md  adr-003-managed-dns.md  adr-004-messaging-backend-and-abstraction.md  adr-005-bonjour-discovery.md  adr-006-env-as-derived-artifact.md  adr-007-port-convention.md  adr-008-convention-based-bot-runner.md  adr-009-managed-ai-provider.md  rfc-001-dashboard-and-companion-apps.md
lib/stack/: __init__.py  __main__.py  _compat.py  cli.py  commands.py  docker.py  forgejo.py  hooks.py  installer.py  installer_v2.py  models.py  output.py  prompt.py  secrets.py  stack.py  users.py
scripts/: bump-version.sh
stacklets/ai/: backend.py  docker-compose.yml  omlx.py  speech.py  stacklet.toml  thinking.py
stacklets/chatai/: caddy.snippet  docker-compose.yml  setup.sh  stacklet.toml
stacklets/code/: docker-compose.yml  stacklet.toml
stacklets/core/: docker-compose.yml  famstack-api.py  stacklet.toml
stacklets/docs/: caddy.snippet  docker-compose.yml  seed.py  stacklet.toml  taxonomy.toml
stacklets/infra/: docker-compose.yml  stacklet.toml
stacklets/messages/: ADMIN_GUIDE.md  caddy.snippet  docker-compose.yml  stacklet.toml
stacklets/photos/: .env.example  README.md  caddy.snippet  docker-compose.yml  stacklet.toml
tests/framework/: conftest.py  test_ai_backend.py  test_cli_class.py  test_commands.py  (+23 more)
(+120 files in other folders)
